Ajustado botões e gif

--- a/style.css
+++ b/style.css
@@ -33,13 +33,28 @@ input {
     text-align: center;
 }
 
-button {
+.loop {
+    width: 25%;
+    border-radius: 5px;
+    margin: 3px;
+    height: 29px;
+    cursor: pointer;
+}
+
+.math {
     width: 80%;
     border-radius: 5px;
     margin: 3px;
     height: 29px;
     cursor: pointer;
+}
 
+.tabuada {
+    width: 30%;
+    border-radius: 5px;
+    margin: 3px;
+    height: 29px;
+    cursor: pointer;
 }
 
 button:hover {
@@ -80,7 +95,7 @@ button:hover {
     grid-area: 2 / 2 / 4 / 5;
     display: flex;
     flex-direction: column;
-    background-color: rgb(129, 177, 108);
+    background-color: rgb(223, 160, 124);
     margin: 5px 10px;
     padding: 10px;
     align-items: center;
